Replaced the files to accommodate the new changes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,20 @@ http://bl.ocks.org/mbostock/4060606 -->
             color: white;
             width: 40px;
             height: 40px;
-            display:inline-block;
+            display: inline-block;
+        }
+
+        div.tooltip {
+            position: absolute;
+            text-align: center;
+            width: 150px;
+            height: 25px;
+            padding: 2px;
+            font-size: 10px;
+            background: #FFFFE0;
+            border: 1px;
+            border-radius: 8px;
+            pointer-events: none;
         }
 
         body {
@@ -109,14 +122,14 @@ http://bl.ocks.org/mbostock/4060606 -->
         <h2 id="time-label"></h2>
     </div>
     <!--<div class="chart">-->
-         <!--<b>Total Calls &nbsp;</b>-->
-        <!--<div style="background-color: rgb(198,219,239); color:black">< 29</div>-->
-        <!--<div style="background-color: rgb(158,202,225); color: black">< 145</div>-->
-        <!--<div style="background-color: rgb(107,174,214); color: black">< 322</div>-->
-        <!--<div style="background-color: rgb(66,146,198)">< 472</div>-->
-        <!--<div style="background-color: rgb(33,113,181)">< 977</div>-->
-        <!--<div style="background-color: rgb(8,81,156)">< 2259</div>-->
-        <!--<div style="background-color: rgb(8,48,107)">< 8861  </div>-->
+    <!--<b>Total Calls &nbsp;</b>-->
+    <!--<div style="background-color: rgb(198,219,239); color:black">< 29</div>-->
+    <!--<div style="background-color: rgb(158,202,225); color: black">< 145</div>-->
+    <!--<div style="background-color: rgb(107,174,214); color: black">< 322</div>-->
+    <!--<div style="background-color: rgb(66,146,198)">< 472</div>-->
+    <!--<div style="background-color: rgb(33,113,181)">< 977</div>-->
+    <!--<div style="background-color: rgb(8,81,156)">< 2259</div>-->
+    <!--<div style="background-color: rgb(8,48,107)">< 8861  </div>-->
     <!--</div>-->
 
 
